All sections are 99% ready exept From the first step section

--- a/front-end-app/src/app/header/header.component.html
+++ b/front-end-app/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="content">
     <img src="/assets/logo.png" alt="" class="header-logo">
     <nav class="header-nav">
         <ul class="in-line-list site-nav">
