added form checking service

--- a/front-end-app/src/app/call-me-section/call-me-section.component.html
+++ b/front-end-app/src/app/call-me-section/call-me-section.component.html
@@ -1,13 +1,13 @@
 <section class="call-me-section">
     <h2>Ruf mich zurück</h2>
     <div class="content">
-        <form action="">
-            <input type="email" name="email" id="email" placeholder="Email*">
+        <form (submit)="callMeClick()">
+            <input type="email" [(ngModel)]="email" name="email" id="email" placeholder="Email*">
             <div class="row">
-                <input type="text" name="name" id="name" placeholder="Name*">
-                <input type="tel" name="tel" id="tel" placeholder="Tel*">
+                <input type="text" [(ngModel)]="name" name="name" id="name" placeholder="Name*">
+                <input type="tel" [(ngModel)]="tell" name="tell" id="tel" placeholder="Tel*">
             </div>
-            <textarea name="info" id="info" cols="30" rows="10" placeholder="Text">
+            <textarea [(ngModel)]="text" name="text" id="info" cols="30" rows="10" placeholder="Text">
 
             </textarea>
             <button type="submit" class="submit">Ruf mich zurück</button>
