--- a/front-end-app/src/app/app.component.html
+++ b/front-end-app/src/app/app.component.html
@@ -1,6 +1,2 @@
-<app-header></app-header>
-<app-main-section></app-main-section>
-<app-about-section></app-about-section>
-<app-gallery-section></app-gallery-section>
-<app-call-me-section></app-call-me-section>
-<app-footer></app-footer>
+
+<router-outlet></router-outlet>
