--- a/front-end-app/src/app/about-section/about-section.component.html
+++ b/front-end-app/src/app/about-section/about-section.component.html
@@ -1,7 +1,7 @@
 <section class="about-section">
-    <h2>Über uns</h2>
+    <h2 i18n>О nas</h2>
     <div class="about-section__content content">
         <img src="assets/zavod.jpg" alt="">
-        <p>Unser Unternehmen möchte den Komfort und die Sicherheit der Kunden. Dkzäune steht Ihnen zur Verfügung. Wir bieten eine einfache und kostenlose Vor-Ort-Beratung. Das Unternehmen verfügt über umfangreiche Erfahrung in der Bau- und Projektentwicklung. Unsere Mitarbeiter suchen nach Lösungen für Ihre Bedürfnisse. </p>
+        <p i18n>Nasza firma pragnie komfortu i bezpieczeństwa klientów. Dkzäune jest do Twojej dyspozycji. Oferujemy prostą i bezpłatną konsultację na miejscu. Firma posiada duże doświadczenie w budownictwie i rozwoju projektów. Nasi pracownicy szukają rozwiązań dla Twoich potrzeb. </p>
     </div>
 </section>
