--- a/front-end-app/src/app/call-me-section/call-me-section.component.html
+++ b/front-end-app/src/app/call-me-section/call-me-section.component.html
@@ -1,5 +1,5 @@
 <section class="call-me-section">
-    <h2>Ruf mich zurück</h2>
+    <h2 i18n>Oddzwoń</h2>
     <div class="content">
         <div class="err-msg" *ngIf="msg.isErr">
             <p>{{msg.msg}}</p>
