--- a/front-end-app/src/app/footer/footer.component.html
+++ b/front-end-app/src/app/footer/footer.component.html
@@ -2,11 +2,11 @@
     <div class="content">
         <h3>Dkzäune</h3>
         <div class="row">
-                <div class="footer-content__item"><img src="/assets/footer/telephone.png" alt=""> <p>+48 516671635</p></div>
-                <div class="footer-content__item"><img src="/assets/footer/adress.png" alt=""> <p>Więcław 11/2 <br> 74-400 Dębno</p></div>
+                <div class="footer-content__item"><img src="/assets/footer/telephone.png" alt=""> <p>+48 733796713</p></div>
+                <div class="footer-content__item"><img src="/assets/footer/adress.png" alt=""> <p>Myśliwska 23/1 <br> Witnica</p></div>
         </div>
         <div class="footer-content__item">
-            <img src="/assets/footer/email.png" alt=""> <p>exemple@dkzaune.pl</p>
+            <img src="/assets/footer/email.png" alt=""> <p>Info@dkzaune.pl</p>
         </div>
     </div>
 </footer>
