--- a/front-end-app/src/app/main-section/main-section.component.html
+++ b/front-end-app/src/app/main-section/main-section.component.html
@@ -1,10 +1,10 @@
 <section class="banner-section">
     <div class="banner-content">
-        <h1 class="banner-slogan">DIE BESTE <span>QUALITÄT</span> ZUM BESTEN PREIS</h1>
+        <h1 class="banner-slogan" i18n>NAJLEPSZA <span>JAKOŚĆ</span> W NAJLEPSZEJ CENIE</h1>
         
         <a href="" class="galerie-btn">
-            <div>
-                ZUR GALERIE
+            <div i18n>
+                DO GALERII
             </div>
         </a>
     </div>
