--- a/front-end-app/src/app/about-section/about-section.component.css
+++ b/front-end-app/src/app/about-section/about-section.component.css
@@ -4,12 +4,24 @@
     color: #6a6a6a;
     line-height: 60px;
     font-weight: 300;
-    height: 400px;
     margin-bottom: 50px;
 }
 
 .about-section__content img{
     width: 450px;
+    max-width: 90%;
     float: right;
     padding-left: 50px;
+}
+
+@media screen and (max-width: 850px) {
+    .about-section__content img{
+        float: none;
+        padding: 0;
+        margin: auto;
+    }
+    .about-section__content{
+        display: flex;
+        flex-direction: column;
+    }
 }
