--- a/front-end-app/src/app/footer/footer.component.css
+++ b/front-end-app/src/app/footer/footer.component.css
@@ -30,3 +30,9 @@ h3{
     padding-left: 20px;
     align-items: center;
 }
+
+@media screen and (max-width: 815px) {
+    .row{
+        flex-direction: column;
+    }
+}
