--- a/front-end-app/src/app/gallery-section/gallery-section.component.css
+++ b/front-end-app/src/app/gallery-section/gallery-section.component.css
@@ -2,20 +2,21 @@
     padding-top: 1px;
     background: #242a2f;
     color: white;
+
     width: 100%;
 }
 
 .gallery__content{
     margin: 0 auto;
-    width: 1280px;
+    max-width: 1280px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
 .gallery__slider-nav-el{
     margin: auto;
-    width: 100px;
-    height: 100px;
+    width: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,7 +31,7 @@
 .gallery__slider{
     display: flex;
     overflow: hidden;
-    width: 80%;
+    width: 75%;
     position: relative;
     height: 450px;
 }
@@ -73,4 +74,27 @@
 .gallery__slider__el__img{
     width: 400px;
     height: 400px;
+}
+
+@media screen and (max-width: 1440px){
+    .gallery__slider__el__text{
+        display: none;
+    }
+    .gallery__slider__el__img{
+        width: 300px;
+        height: 300px;
+    }
+    .gallery__slider{
+        height: 350px;
+    }
+}
+
+@media screen and (max-width: 440px){
+    .gallery__slider{
+        height: 300px;
+    }
+    .gallery__slider__el__img{
+        width: 250px;
+        height: 250px;
+    }
 }
