--- a/front-end-app/src/app/header/header.component.css
+++ b/front-end-app/src/app/header/header.component.css
@@ -5,11 +5,18 @@ header{
     font-size: 24px;
 }
 
+.header-logo{
+    width: 170px;
+}
+
 .header-nav{
     margin: auto 0;
-    width: 50%;
     display: flex;
     justify-content: space-between;
+}
+
+.ln-nav a{
+    color: white
 }
 
 .site-nav li{
@@ -38,8 +45,43 @@ header{
     transition: 1s;
     background-size: 300% 100%;
     background-position: 30%;
+    margin-left: 20px;
 }
 
 .ln-nav:hover{
     background-position: 69%;
+}
+
+.list-opn{
+    display: none;
+    background-color: rgb(221, 221, 221);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    transform: rotate(300grad);
+    margin: auto 0;
+}
+
+.logo-and-list{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+@media screen and (max-width: 750px){
+    .content{
+        flex-direction: column;
+        height: 118px;
+        overflow: hidden;
+        transition: 1s;
     }
+    .list-opn{
+        display: block;
+        transition: 1s;
+    }
+}
+
+.ln-nav{
+    background: black;
+}
